# lydian-lang

./: .clang-format  .gitignore  CMakeLists.txt  README.md  debug_ast.json  debug_tokens.json  lydian-lang.code-workspace  sammy-lang.code-workspace
scripts/: initial-build.sh
src/: CharacterType.cpp  NodeType.cpp  ScopeType.cpp  Token.cpp  TokenType.cpp  charTypeFrom.cpp  characterRanges.cpp  llvmSetup.h  main.cpp  repl.cpp  utils.cpp
src/InterpolationContextStack/: InterpolationContextStack.cpp  InterpolationContextStack.h
src/Lexer/: Lexer.cpp  Lexer.h  getStringTokenType.cpp  getToken.cpp  shouldContinueConsumingToken.cpp
src/Lexer/handlers/: handleCloseLambdaArgIdentifierMode.cpp  handleCloseMultilineComment.cpp  handleCloseSingleLineComment.cpp  handleEndNumberMode.cpp  handleIncrementLinesAndColumns.cpp  handleOpenLambdaArgIdentifierMode.cpp  handleOpenMultilineComment.cpp  handleOpenSingleLineComment.cpp  handleOpenStringInterpolation.cpp  handlePeriodWhileInNumberMode.cpp  handleRangeOperator.cpp  handleStrings.cpp  handleTokenStartNumber.cpp
src/LydianAST/: LydianAST.cpp  LydianAST.h  Node.cpp  Node.h  prepareCallableLeftSibling.cpp
src/LydianAST/handlers/: handleBinaryOperator.cpp  handleCloseCurly.cpp  handleCloseParen.cpp  handleFunctionCall.cpp  handleFunctionDefinitionName.cpp  handleGenericExpressionOpen.cpp  handleKeywordElse.cpp  handleKeywordIf.cpp  handleUnaryOperator.cpp  handleVariableAssignment.cpp
src/LydianAST/nodeTypes/AssignmentNode/: AssignmentNode.cpp  AssignmentNode.h
src/LydianAST/nodeTypes/BinaryExpressionNode/: BinaryExpressionNode.cpp  BinaryExpressionNode.h
src/LydianAST/nodeTypes/BooleanNode/: BooleanNode.cpp  BooleanNode.h
src/LydianAST/nodeTypes/ConciseLambdaArgNode/: ConciseLambdaArgNode.cpp  ConciseLambdaArgNode.h
src/LydianAST/nodeTypes/FunctionCallNode/: FunctionCallNode.cpp  FunctionCallNode.h
src/LydianAST/nodeTypes/FunctionDeclarationNode/: FunctionDeclarationNode.cpp  FunctionDeclarationNode.h
src/LydianAST/nodeTypes/GenericExpressionNode/: GenericExpressionNode.cpp  GenericExpressionNode.h
src/LydianAST/nodeTypes/IdentifierNode/: IdentifierNode.cpp  IdentifierNode.h
src/LydianAST/nodeTypes/IfExpressionNode/: IfExpressionNode.cpp  IfExpressionNode.h
src/LydianAST/nodeTypes/ListNode/: ListNode.cpp  ListNode.h
src/LydianAST/nodeTypes/NilNode/: NilNode.cpp  NilNode.h
src/LydianAST/nodeTypes/NumberNode/: NumberNode.cpp  NumberNode.h
src/LydianAST/nodeTypes/RootNode/: RootNode.cpp  RootNode.h
src/LydianAST/nodeTypes/UnaryExpressionNode/: UnaryExpressionNode.cpp  UnaryExpressionNode.h
src/SammyAST/: Node.cpp  Node.h  SammyAST.cpp  SammyAST.h  prepareCallableLeftSibling.cpp
src/SammyAST/handlers/: handleBinaryOperator.cpp  handleCloseCurly.cpp  handleCloseParen.cpp  handleFunctionCall.cpp  handleFunctionDefinitionName.cpp  handleGenericExpressionOpen.cpp  handleUnaryOperator.cpp  handleVariableAssignment.cpp
src/SammyAST/nodeTypes/AssignmentNode/: AssignmentNode.cpp  AssignmentNode.h
src/SammyAST/nodeTypes/BinaryExpressionNode/: BinaryExpressionNode.cpp  BinaryExpressionNode.h
src/SammyAST/nodeTypes/BooleanNode/: BooleanNode.cpp  (+1 more)
tests/: test.cpp  testUtils.cpp  tmpTestFile.json
tests/cases/assignment-1/: expectedAST.json  expectedTokens.json  input.lydian  test.cpp
tests/cases/big-file-1/: expectedTokens.json  input.lydian  input.sammy  test.cpp
tests/cases/booleans-1/: expectedAST.json  expectedTokens.json  test.cpp
tests/cases/comments-1/: expectedAST.json  expectedTokens.json  input.sammy  test.cpp
tests/cases/function-calls-1/: expectedAST.json  expectedTokens.json  input.lydian  test.cpp
tests/cases/function-definitions-1/: expectedAST.json  expectedTokens.json  input.sammy  test.cpp
tests/cases/generic-expressions-1/: expectedAST.json  expectedTokens.json  input.lydian  test.cpp
tests/cases/if-else-1/: expectedAST.json  expectedTokens.json  input.lydian  test.cpp
tests/cases/lambdas-1/: expectedTokens.json  test.cpp
tests/cases/lists-1/: expectedAST.json  expectedTokens.json  input.lydian  test.cpp
tests/cases/numbers-1/: expectedAST.json  expectedTokens.json  test.cpp
tests/cases/operator-precedence-1/: expectedTokens.json  test.cpp
tests/cases/operator-precedence-big-1/: test.cpp
tests/cases/operator-precedence-small-1/: expectedAST.json  expectedTokens.json  test.cpp
tests/cases/small-file-1/: expectedTokens.json  test.cpp
tests/cases/string-interpolation-1/: expectedTokens.json  input.lydian  test.cpp
tests/cases/variables-1/: expectedTokens.json  test.cpp
(+32 files in other folders)
